--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -4,6 +4,9 @@
       "./scripts/main.js",
       "./styles/main.scss"
     ],
+    "admin": [
+      "./styles/admin.scss"
+    ],
     "customizer": [
       "./scripts/customizer.js"
     ]
